# SlicerDeformityCorrectionOsteotomyPlanner

./: CMakeLists.txt  README.md  createTestDataScript.py  fiducials.mrk.json
DeformityCorrectionOsteotomyPlanner/: CMakeLists.txt  DeformityCorrectionOsteotomyPlanner.py
DeformityCorrectionOsteotomyPlanner/Resources/: deformedBone.vtk
DeformityCorrectionOsteotomyPlanner/Resources/UI/: DeformityCorrectionOsteotomyPlanner.ui
Docs/: Design.pptx
